--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "ace-builds": "^1.32.2",
     "highlight.js": "^11.9.0",
     "marked": "^9.1.6",
     "react": "^18.2.0",
+    "react-ace": "^10.1.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "react-syntax-highlighter": "^15.5.0",
     "vm-browserify": "^1.1.2",
     "web-vitals": "^2.1.4"
   },
