--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "ace-builds": "^1.32.2",
+    "file-saver": "^2.0.5",
     "highlight.js": "^11.9.0",
     "marked": "^9.1.6",
     "react": "^18.2.0",
